--- a/Get_Done_Files.ipynb
+++ b/Get_Done_Files.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "adf8e9e9-e33f-476a-95e9-bb0664c320a6",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "1                                               NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "5a1badeb-5b02-47c6-b53b-807b05ad9385",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "1  sgxpennystocksdiscussion_messages310.csv  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "570883ad-92b9-4a75-afc7-5ac43b2421b2",
    "metadata": {},
    "outputs": [],
@@ -249,11 +249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "50195741-e8cd-4d77-994a-4e81f8c05b3b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('done_files.txt', 'w') as f:\n",
+    "    for fv in frequent_values:\n",
+    "        f.write(fv + '\\n')\n",
+    "f.close()"
+   ]
   }
  ],
  "metadata": {
